# irion-extension-tests

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/skills/speckit-git-commit/: SKILL.md
.github/skills/speckit-git-feature/: SKILL.md
.github/workflows/: MainDistributionPipeline.yml  extension-qa.yml  fts-compatibility.yml
.specify/: extensions.yml  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
analisi/SAL/: analisi.md  memory.md  presentazione-SAL-v1.pptx  presentazione.md  sal.md
cmake/: fts_all_loaded.cmake
config/: extensions.yml
configs/: fts_all_loaded.json
docs/: ci-architecture.md  fts-poc.md
scripts/: build.sh  check-test-requirements.py  init-ducklake-autoload.sql  init-ducklake-default.sql  init-extensions.sql  init-without-httpfs.sql  install-extensions.sql  prepare-ducklake-config.py  prepare-mssql-configured-runner.py  prepare-mssql-master-fixture.py  prepare-mssql-release-tests.py  prepare-test-battery.py  resolve-extension-config.py  run-mssql-configured-tests.sh  run-mssql-tests-base.sh  run-mssql-tests.sh  run-postgres-scanner-tests.sh  run-standard-tests.sh  run-test-battery.sh  run-tests.sh  run_fts_ci.sh  setup-httpfs.sh  validate-extension-probe.py
specs/001-httpfs-qa-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: qa_test_extension.cpp
src/include/: qa_test_extension.hpp
(+7 files in other folders)
